--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       
       <div class="textarea">text</div>
 
-      <div>save</div>
+      <div class="saveBtn">save</div>
     </section>
 
     <section class="time-block row">
