--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="dateTime" class="lead"></p>
   </header>
-  <main id="block08:00:00" class="container">
+  <main id="08:00:00" class="container">
 
     <section class="row time-block">
       <h2 class="hour col-1">8am</h2>
